# tmp_python_env

./: README.md  deployment.yml  docker-compose-pip.yml  docker-compose-poetry.yml  docker-compose-tmppythonenv.yml  install_petry.sh
python_poetry/: Dockerfile  pyproject.toml
python_poetry/data/: logger.conf
python_poetry/src/: readLogConfig.py
tmppythonenv/: Dockerfile  env.py  installEnv.sh  requirements.txt  start.py
